prevent overscroll refreshing on mobile causing players to accidently leave

--- a/Client/css.css
+++ b/Client/css.css
@@ -40,6 +40,7 @@
 
 body {
     background-color: paleturquoise;
+    overscroll-behavior: none;
 }
 
 .usernamediv {
